--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
         .package-card { background: #1e293b; padding: 25px; border-radius: 20px; border: 1px solid #334155; transition: 0.3s; cursor: pointer; }
         .package-card:hover { border-color: #f1c40f; transform: translateY(-3px); }
         #game-zone { display: none; max-width: 850px; margin: 0 auto; padding-bottom: 50px; }
-        .controls { margin-bottom: 25px; }
-        .controls button { padding: 12px 20px; background: #334155; border: 1px solid #f1c40f; border-radius: 10px; color: #f1c40f; font-weight: bold; cursor: pointer; margin: 5px; }
         .question-card { background: #ffffff; padding: 35px; border-radius: 25px; color: #1e293b; text-align: left; margin-bottom: 40px; border-top: 6px solid #3b82f6; }
         .theme-header { background: linear-gradient(90deg, #3b82f6, #6366f1); color: white; padding: 15px 25px; border-radius: 12px; font-weight: bold; text-align: left; margin: 35px 0 20px 0; text-transform: uppercase; }
         .swayaki-box { background: white; color: #1e293b; margin-bottom: 15px; border-radius: 12px; display: flex; align-items: stretch; overflow: hidden; border: 1px solid #e2e8f0; text-align: left; }
@@ -42,11 +40,11 @@
     <div id="game-zone">
         <button class="back-btn" onclick="location.reload()">⬅️ უკან დაბრუნება</button>
         <h1 id="pkg-name-display" style="color: #f1c40f;"></h1>
-        <div id="round-controls" class="controls">
-            <button onclick="filterRound(1)">რაუნდი I</button>
-            <button onclick="filterRound(2)">ბარათონი</button>
-            <button onclick="filterRound(3)">პაპა კარლო</button>
-            <button onclick="filterRound(4)">რაუნდი IV</button>
+        <div id="round-controls" style="margin-bottom:20px;">
+            <button style="padding:10px 15px; background:#334155; color:white; border:1px solid #f1c40f; border-radius:8px; cursor:pointer;" onclick="filterRound(1)">რაუნდი I</button>
+            <button style="padding:10px 15px; background:#334155; color:white; border:1px solid #f1c40f; border-radius:8px; cursor:pointer;" onclick="filterRound(2)">ბარათონი</button>
+            <button style="padding:10px 15px; background:#334155; color:white; border:1px solid #f1c40f; border-radius:8px; cursor:pointer;" onclick="filterRound(3)">პაპა კარლო</button>
+            <button style="padding:10px 15px; background:#334155; color:white; border:1px solid #f1c40f; border-radius:8px; cursor:pointer;" onclick="filterRound(4)">რაუნდი IV</button>
         </div>
         <div id="quiz-container"></div>
     </div>
@@ -60,8 +58,7 @@
         let currentPkgObj = null;
 
         async function initApp() {
-            const { data, error } = await _db.from('packages').select('*');
-            if (error) { document.getElementById('leaderboard-list').innerText = "შეცდომა ბაზასთან."; return; }
+            const { data } = await _db.from('packages').select('*');
             allPackages = data || [];
             updateLeaderboard(allPackages);
             showCategories();
@@ -70,7 +67,7 @@
         function updateLeaderboard(data) {
             const stats = {};
             data.forEach(p => {
-                const name = (p.author_name || "უცნობი").trim();
+                const name = (p.author_name || "ავტორი").trim();
                 if (!stats[name]) stats[name] = { score: 0, votes: 0 };
                 stats[name].score += Number(p.total_score || 0);
                 stats[name].votes += Number(p.votes_count || 0);
@@ -79,10 +76,10 @@
                 name,
                 avg: stats[name].votes > 0 ? (stats[name].score / stats[name].votes) : 0,
                 votes: stats[name].votes
-            })).sort((a, b) => b.avg - a.avg);
+            })).filter(a => a.votes > 0).sort((a, b) => b.avg - a.avg);
 
             const lb = document.getElementById('leaderboard-list');
-            lb.innerHTML = sorted.length ? "" : "ავტორები არ მოიძებნა.";
+            lb.innerHTML = sorted.length ? "" : "მონაცემები არ არის.";
             sorted.slice(0, 5).forEach((auth, i) => {
                 lb.innerHTML += `<div class="lb-item"><span>${i+1}. ${auth.name} (${auth.votes})</span><span style="color:#f1c40f; font-weight:bold;">⭐ ${auth.avg.toFixed(1)}</span></div>`;
             });
@@ -91,31 +88,27 @@
         function showCategories() {
             const container = document.getElementById('menu-container');
             container.innerHTML = "";
-            const cats = {};
-            allPackages.forEach(p => {
-                const c = p.category || "სხვა";
-                if (!cats[c]) cats[c] = [];
-                cats[c].push(p);
-            });
-            Object.keys(cats).forEach(catName => {
-                const icon = cats[catName][0].icon || "📂";
+            const cats = [...new Set(allPackages.map(p => p.category || "სხვა"))];
+            cats.forEach(c => {
+                const pInC = allPackages.filter(p => (p.category || "სხვა") === c);
                 const card = document.createElement('div');
                 card.className = 'package-card';
-                card.onclick = () => showPackagesInCategory(catName, cats[catName]);
-                card.innerHTML = `<div style="font-size:3.5rem;">${icon}</div><h2>${catName}</h2><p>${cats[catName].length} პაკეტი</p>`;
+                card.onclick = () => showPackagesInCategory(c, pInC);
+                card.innerHTML = `<div style="font-size:3.5rem;">${pInC[0].icon || '📂'}</div><h2>${c}</h2><p>${pInC.length} პაკეტი</p>`;
                 container.appendChild(card);
             });
         }
 
-        function showPackagesInCategory(catName, pkgs) {
-            document.getElementById('menu-title').innerText = `თემა: ${catName}`;
+        function showPackagesInCategory(cat, pkgs) {
+            document.getElementById('menu-title').innerText = `თემა: ${cat}`;
             const container = document.getElementById('menu-container');
             container.innerHTML = `<div style="grid-column: 1/-1;"><button class="back-btn" onclick="location.reload()">⬅️ უკან</button></div>`;
             pkgs.forEach(p => {
                 const card = document.createElement('div');
                 card.className = 'package-card';
                 card.onclick = () => openPkg(p);
-                card.innerHTML = `<div style="font-size:2rem;">${p.icon || '💡'}</div><h3>${p.title}</h3><p>ავტორი: ${p.author_name}</p><div>⭐ ${Number(p.rating || 0).toFixed(1)}</div>`;
+                const r = Number(p.votes_count || 0) > 0 ? (Number(p.total_score || 0) / Number(p.votes_count)).toFixed(1) : "0.0";
+                card.innerHTML = `<div style="font-size:2rem;">${p.icon || '💡'}</div><h3>${p.title}</h3><p>ავტორი: ${p.author_name}</p><div>⭐ ${r}</div>`;
                 container.appendChild(card);
             });
         }
@@ -125,8 +118,8 @@
             document.getElementById('home-page').style.display = 'none';
             document.getElementById('game-zone').style.display = 'block';
             document.getElementById('pkg-name-display').innerText = pkg.title;
-            const isSwayaki = pkg.title.toLowerCase().includes("სვაიაკი");
-            document.getElementById('round-controls').style.display = isSwayaki ? 'none' : 'block';
+            const isS = pkg.title.toLowerCase().includes("სვაიაკი");
+            document.getElementById('round-controls').style.display = isS ? 'none' : 'block';
             Papa.parse(pkg.csv_url, { download: true, complete: (res) => { activePkgData = res.data; filterRound(1); } });
         }
 
@@ -134,34 +127,38 @@
             const container = document.getElementById('quiz-container');
             container.innerHTML = "";
             let qList = activePkgData.filter(r => r[0] && r[0].toString().trim() === num.toString());
-            const isSwayaki = currentPkgObj.title.toLowerCase().includes("სვაიაკი");
-            let swayakiCount = 0;
+            const isS = currentPkgObj.title.toLowerCase().includes("სვაიაკი");
+            let sCount = 0;
 
             qList.forEach(row => {
                 let txt = (row[1] || "").trim();
                 let ans = (row[2] || "").trim();
                 if (txt.toLowerCase().startsWith("თემა:")) {
                     container.innerHTML += `<div class="theme-header">📁 ${txt}</div>`;
-                    swayakiCount = 0;
-                } else if (isSwayaki) {
-                    swayakiCount++;
-                    container.innerHTML += `<div class="swayaki-box"><div class="swayaki-pts">${swayakiCount*10}</div><div class="swayaki-content"><div>${txt}</div><button onclick="this.nextElementSibling.style.display='block'" style="background:none; border:none; color:#3b82f6; cursor:pointer; font-weight:bold; padding:0; margin-top:10px;">პასუხი:</button><div style="display:none; color:#166534; font-weight:bold; margin-top:5px;">✅ ${ans}</div></div></div>`;
+                    sCount = 0;
+                } else if (isS) {
+                    sCount++;
+                    container.innerHTML += `<div class="swayaki-box"><div class="swayaki-pts">${sCount*10}</div><div class="swayaki-content"><div>${txt}</div><button onclick="this.nextElementSibling.style.display='block'" style="background:none; border:none; color:#3b82f6; cursor:pointer; font-weight:bold; margin-top:10px;">პასუხი:</button><div style="display:none; color:#166534; font-weight:bold; margin-top:5px;">✅ ${ans}</div></div></div>`;
                 } else {
-                    container.innerHTML += `<div class="question-card"><div>${txt}</div><button class="controls" style="width:100%; margin-top:15px;" onclick="this.nextElementSibling.style.display='block'">ნახე პასუხი</button><div class="ans-text">✅ ${ans}</div></div>`;
+                    container.innerHTML += `<div class="question-card"><div>${txt}</div><button style="width:100%; margin-top:15px; padding:10px; background:#0f172a; color:white; border:none; border-radius:8px; cursor:pointer;" onclick="this.nextElementSibling.style.display='block'">ნახე პასუხი</button><div class="ans-text">✅ ${ans}</div></div>`;
                 }
             });
 
-            if (isSwayaki || num === 4) {
-                container.innerHTML += `<div class="final-rating-box"><h3>შეაფასეთ პაკეტი</h3><select id="rate-sel" style="padding:10px; border-radius:8px;"><option value="5">5 ⭐</option><option value="4">4 ⭐</option><option value="3">3 ⭐</option><option value="2">2 ⭐</option><option value="1">1 ⭐</option></select><br><button class="controls" style="margin-top:10px;" onclick="vote()">გაგზავნა</button></div>`;
+            if (isS || num === 4) {
+                container.innerHTML += `<div class="final-rating-box"><h3>შეაფასეთ პაკეტი</h3><select id="rate-sel" style="padding:10px; border-radius:8px;"><option value="5">5 ⭐</option><option value="4">4 ⭐</option><option value="3">3 ⭐</option><option value="2">2 ⭐</option><option value="1">1 ⭐</option></select><br><button style="margin-top:15px; padding:10px 25px; background:#0f172a; color:white; border:none; border-radius:8px; cursor:pointer;" onclick="vote()">გაგზავნა</button></div>`;
             }
             window.scrollTo(0,0);
         };
 
         window.vote = async function() {
             const val = parseInt(document.getElementById('rate-sel').value);
-            const nVotes = Number(currentPkgObj.votes_count || 0) + 1;
-            const nScore = Number(currentPkgObj.total_score || 0) + val;
-            const { error } = await _db.from('packages').update({ total_score: nScore, votes_count: nVotes, rating: nScore/nVotes }).eq('id', currentPkgObj.id);
+            // უახლესი მონაცემების წამოღება შეცდომის თავიდან ასაცილებლად
+            const { data } = await _db.from('packages').select('total_score, votes_count').eq('id', currentPkgObj.id).single();
+            const nVotes = Number(data.votes_count || 0) + 1;
+            const nScore = Number(data.total_score || 0) + val;
+            const nRating = nScore / nVotes;
+            
+            const { error } = await _db.from('packages').update({ total_score: nScore, votes_count: nVotes, rating: nRating }).eq('id', currentPkgObj.id);
             if(!error) { alert("მადლობა!"); location.reload(); }
         };
 
